Huobi ticker and tickers in phone activity

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,19 +3,16 @@
     android:id="@+id/scrollview1"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="@string/description" />
-
         <EditText
             android:id="@+id/editTextDonationaddress"
             android:layout_width="match_parent"
@@ -27,5 +24,11 @@
             android:text="@string/bitcoindonationaddress"
             android:textSize="12sp" >
         </EditText>
+        <TextView
+            android:id="@+id/tickertext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="@string/no_smartwatch_ticker" />
     </LinearLayout>
 </ScrollView>
