--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
-
     <style name="ExtensionLightTheme" parent="@android:style/Theme"/>
-
+    <style name="widgetTextStyle" parent="android:Widget.TextView">
+        <item name="android:layout_margin">1sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#ff000000</item>
+        <item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_gravity">center</item>
+    </style>
 </resources>
