--- a/res/layout/sample_control.xml
+++ b/res/layout/sample_control.xml
@@ -25,8 +25,8 @@
         android:textColor="@color/smart_watch_text_color_orange"
         android:textSize="@dimen/smart_watch_text_size_normal" />
     <com.sonyericsson.extras.liveware.extension.util.AefTextView
-        android:text="@string/mtgox"
-        android:id="@+id/mtgox_text"
+        android:text="@string/kraken"
+        android:id="@+id/kraken_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
