--- a/app/src/main/res/layout/price_widget_content.xml
+++ b/app/src/main/res/layout/price_widget_content.xml
@@ -20,7 +20,7 @@
             android:text="@string/bitstamp" />
 
         <TextView
-            android:id="@+id/widget_mtgox"
+            android:id="@+id/widget_kraken"
             style="@style/widgetTextStyle"
             android:layout_gravity="left"
             android:text="@string/kraken" />
@@ -40,16 +40,16 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/widget_huobi"
+            android:id="@+id/widget_bitfinex"
             style="@style/widgetTextStyle"
             android:layout_gravity="right"
-            android:text="@string/huobi" />
+            android:text="@string/bitfinex" />
 
         <TextView
-            android:id="@+id/widget_btcchina"
+            android:id="@+id/widget_bittrex"
             style="@style/widgetTextStyle"
             android:layout_gravity="right"
-            android:text="@string/btc_china" />
+            android:text="@string/bittrex" />
 
     </LinearLayout>
 
